--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SCG Discount</title>
+  <title>SCG Only</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;500;700&display=swap');
     :root { --primary-color: #2E7D32; --secondary-color: #E8F5E9; --text-color: #333; --light-text: #555; --card-radius: 8px; --shadow: rgba(0,0,0,0.1); --header-height: 56px; }
