--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </style>
 </head>
 <body>
-  <header>SCG Discount</header>
+  <header>SCG Only</header>
   <div class="filter-controls">
     <input type="search" id="search-input" placeholder="ค้นหาร้าน...">
     <select id="filter-province"><option value="">จังหวัด</option></select>
